@@ -13,8 +13,8 @@ CSSLint.addRule({
 
     //initialization
     init: function(parser, reporter){
-        var rule = this;
-        var count = 0;
+        var rule = this,
+            count = 0;
 
         //warn that important is used and increment the declaration counter
         parser.addListener("property", function(event){
@@ -29,7 +29,7 @@ CSSLint.addRule({
         parser.addListener("endstylesheet", function(){
             reporter.stat("important", count);
             if (count >= 10){
-                reporter.rollupError("Too many !important declarations (" + count + "), be careful with rule specificity", rule);
+                reporter.rollupWarn("Too many !important declarations (" + count + "), be careful with rule specificity", rule);
             }
         });
     }
